# apps/api/src/main/java/com/suncorp/securehub/dto/TagDto.java
@@ -1,0 +1,19 @@
+package com.suncorp.securehub.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.time.LocalDateTime;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class TagDto {
+    private Long id;
+    private String name;
+    private UserDto createdBy;
+    private LocalDateTime createdAt;
+}
